[package]
name = "crane-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
rmcp = { version = "1.1.0", features = ["server", "transport-io"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
